--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.806.0",
+    "@aws-sdk/client-ses": "^3.919.0",
     "@aws-sdk/credential-provider-node": "^3.806.0",
     "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@googlemaps/google-maps-services-js": "^3.3.36",
