--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "exceljs": "^4.0.1",
     "express": "^4.17.1",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
