--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
     "@aws-sdk/client-ses": "^3.919.0",
     "@aws-sdk/credential-provider-node": "^3.806.0",
     "@aws-sdk/s3-request-presigner": "^3.806.0",
+    "@bull-board/express": "^6.15.0",
     "@googlemaps/google-maps-services-js": "^3.3.36",
     "@googlemaps/polyline-codec": "^1.0.28",
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.1",
+    "bull": "^4.16.5",
     "config": "^3.2.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "exceljs": "^4.0.1",
     "express": "^4.17.1",
     "express-rate-limit": "^8.2.1",
+    "express-session": "^1.18.2",
     "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.24",
@@ -42,8 +49,11 @@
     "multer": "^2.0.2",
     "nanoid": "^3.3.4",
     "node-cron": "^2.0.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
     "rand-token": "^1.0.1",
+    "redis": "^5.10.0",
     "request": "^2.88.0",
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
